--- a/DayGram/app/src/main/res/layout/bottom.xml
+++ b/DayGram/app/src/main/res/layout/bottom.xml
@@ -4,9 +4,9 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:background="@drawable/mainbg"
-    >
+    android:weightSum="1">
     <ImageView
-        android:layout_width="wrap_content"
+        android:layout_width="8dp"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:src="@drawable/back" />
@@ -16,30 +16,31 @@
         android:layout_gravity="bottom"
         android:layout_marginBottom="15dp"
         android:src="@drawable/line" />
-    <TextView
-        android:layout_width="wrap_content"
+
+    <Spinner
+        android:id="@+id/spinner_month"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:layout_marginBottom="5dp"
-        android:text=" SEPTEMBER "
-        android:textSize="18sp"
-        android:textColor="#696464"
-        />
+        android:layout_marginBottom="7dp"
+        android:background="@null"
+        android:entries="@array/monthlist"
+        android:layout_weight="0.41" />
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
         android:layout_marginBottom="15dp"
         android:src="@drawable/line2" />
-    <TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="bottom"
-    android:layout_marginBottom="5dp"
-    android:text=" 2016 "
-    android:textSize="18sp"
-    android:textColor="#696464"
-    />
+    <Spinner
+        android:id="@+id/spinner_year"
+        android:layout_width="35dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        android:background="@null"
+        android:layout_marginBottom="7dp"
+        android:entries="@array/yearlist"
+        android:layout_weight="0.16" />
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -73,7 +74,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
-        android:src="@drawable/back" />
+        android:src="@drawable/back"
+        android:layout_weight="0.14" />
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -84,6 +86,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom"
+        android:layout_weight="0.12"
         android:src="@drawable/back" />
     <ImageView
         android:layout_width="wrap_content"
